--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -11,6 +11,196 @@
 * {{a|Australia}} {{enPR|răb'ət}}, {{IPA|/ˈræbət/}}, {{SAMPA|/"r{b@t/}}
 * Homophones: [[rabbet]]
 
+===Etymology 1===
+From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{etyl|fr|-}} dialect {{term|rabbotte|lang=frm}}, {{term|rabouillet||baby rabbit|lang=frm}}), from {{etyl|wa}} {{term|robète|lang=wa}}, diminutive of {{etyl|dum}} {{term|robbe||rabbit; seal|lang=dum}} (compare {{etyl|vls|-}} {{term|robbe||rabbit|lang=vls}}, {{etyl|nl|-}} {{term|rob||seal|lang=nl}}), from Middle Low German {{term|robbe||seal|lang=gml}} (compare Low German dialect {{term||Rubb}}, {{term|Robb|lang=nds}}), from {{term|rubben||ro rub|lang=gml}}. More at {{l|en|rub}}.
+
+====Noun====
+{{en-noun}}
+
+# Several small [[mammal]]s of the family ''[[Leporidae]]'' (rabbits and [[hare]]s), with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
+#: ''The pioneers survived by eating the small game they could get; '''rabbits''', squirrels and occasionally a raccoon.''
+# The [[fur]] of a rabbit typically used to imitate another [[animal]]'s fur.
+# A [[runner]] in a [[distance]] [[race]] whose goal is mainly to set the [[pace]], either to [[tire]] a specific [[rival]] so that a [[teammate]] can win or to help another break a [[record]]; a [[pacesetter]].
+# {{cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
+
+=====Synonyms=====
+* [[bunny]] (''[[hypocoristic]]'', ''[[colloquial]]'', ''[[pet name]]'')
+* [[coney]], [[cony]] (''dialect'')
+
+=====Derived terms=====
+{{rel-top3|Terms derived from the noun "rabbit"}}
+* [[breed like rabbits]]
+* [[fuck like rabbits]]
+* [[jackrabbit]]
+{{rel-mid3}}
+* [[kill the rabbit]]
+* [[pull a rabbit out of the hat]]
+* [[rabbit's foot]]
+{{rel-mid3}}
+* [[rabbity]]
+* [[the rabbit died]]
+* [[Welsh rabbit]]
+{{rel-bottom}}
+
+=====Translations=====
+{{trans-top|mammal}}
+* [[Alabama]]: [[chokfi]]
+* Albanian: {{t-|sq|lepur i gropave|xs=Albanian}}
+* Arabic: {{t-|ar|ارنب|m|alt=أرْنَب|tr=’árnab}}
+*: [[Egyptian Arabic]]: {{tø|arz|ارنب|m|tr='arnab|sc=Arab}}
+* Armenian: {{t|hy|ճագար|tr=č̣agar|sc=Armn}}
+* [[Azeri]]: {{t+|az|dovşan|xs=Azeri}}
+* [[Basque]]: [[untxi]]
+* Belarusian: {{t-|be|трус|m|tr=trus|xs=Belarusian}}, {{t|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
+* Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|খরেগাশ|tr=khôrgosh|sc=Beng}}
+* [[Breton]]: [[lapin]], [[konikl]]
+* Bulgarian: {{t+|bg|заек|m|tr=zaek}}
+* [[Catalan]]: {{t+|ca|conill}}
+* Cherokee: [[ᏥᏍᏚ]] (tsisdu)
+* [[Chickasaw]]: [[chokfi]]
+* Chinese:
+*: Mandarin: {{t|zh|兔子|tr=tùzi|sc=Hani}}, {{qualifier|white rabbit}} {{t|zh|白兔|tr=báitù|sc=Hani}}
+* Czech: {{t-|cs|králík|m}}
+* Danish: {{t+|da|kanin|c}}
+* [[Dena'ina]]: {{tø|tfn|hvaya}}
+* Dutch: {{t+|nl|konijn|n}}
+* Esperanto: {{t-|eo|kuniklo|xs=Esperanto}}
+* Estonian: [[küülik]]
+* [[Ewe]]: [[fɔmizi]]
+* Faroese: {{t-|fo|kanin|xs=Faroese}}
+* Finnish: {{t+|fi|kaniini}}, {{t+|fi|kani}}
+* French: {{t+|fr|lapin|m}}
+* [[Friulian]]: [[cunin]]
+* [[Galician]]: [[coello]]
+* Georgian: {{t|ka|ბოცვერი|tr=botc'veri|sc=Geor|xs=Georgian}}
+* German: {{t+|de|Kaninchen|n}}
+* Greek: {{t+|el|κουνέλι|n|tr=kounéli}}
+*: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
+* [[Gujarati]]: [[સસલું]] (saslu.n)
+* Hebrew: {{t|he|ארנב|m|tr=arnáv}}
+* Hindi: {{t|hi|ख़रगोश|m|tr=xargoś|sc=Deva}}, {{t|hi|ख़रगोशनी|f|tr=xargośanī|sc=Deva}}
+* [[Hopi]]: {{tø|hop|taavo}}
+* Hungarian: {{t+|hu|nyúl}}
+* Icelandic: {{t+|is|kanína}}
+* Indonesian: {{t+|id|kelinci|xs=Indonesian}}
+* [[Interlingua]]: [[conilio]]
+* Irish: {{t+|ga|coinín|xs=Irish}}
+* Italian: {{t+|it|coniglio|m}}
+* Japanese: {{t|ja|兎|tr=[[うさぎ]], usagi|sc=Jpan}}, {{t|ja|ウサギ|tr=usagi|sc=Jpan}}
+* [[Khmer]]: {{t|km|ទន្សាយគល់|tr=tʊənsaay kʊəl|sc=Khmr}}
+* Korean: {{t+|ko|토끼|tr=tokki|sc=Hang}}
+* Kurdish:
+*: Kurmanji: {{t|ku|kêroşk}}, {{t|ku|xirrnîfk}}
+*: Sorani: {{ku-Arab|[[که‌روێشک]]}} (kêrwişk)
+* [[Ladin]]: [[conicio]]
+* [[Ladino]]: [[konejo]]
+* Latin: {{t+|la|cuniculus|alt=cunīculus|m}}
+* Latvian: [[trusis]]
+{{trans-mid}}
+* Lithuanian: {{t+|lt|triušis|xs=Lithuanian}}
+* [[Lower Sorbian]]: [[karnikel]]
+* [[Macedonian]]: [[заjак]] (zajak) {{m}}
+* Malay: {{t+|ms|arnab|xs=Malay}}
+* Maltese: {{t-|mt|fenek|m|xs=Maltese}}
+* [[Manx]]: {{t|gv|conning|f}}
+* [[Marathi]]: [[ससा]] {{m}}, [[सशी]] {{f}}
+* [[Maricopa]]: {{tø|mrc|xalyaw}}
+* [[Nahuatl]]: [[tochtli]]
+* Navajo: {{tø|nv|gah}}
+* [[Northern Sami]]: [[kaniidna]]
+* Norwegian: {{t+|no|kanin|m}}
+* [[O'odham]]: {{tø|ood|tohbi}}
+* [[Occitan]]: [[conilh]] {{m}}, [[lapin]] {{m}}
+* Persian: {{t|fa|خرگوش|tr=xarguš|sc=fa-Arab}}
+* Polish: {{t+|pl|królik|m}}
+* Portuguese: {{t+|pt|coelho|m}}
+* [[Romani]]: [[shoshoy]] {{m}}, [[shoshni]] {{f}}
+* Romanian: [[iepure]], [[iepure de vizuină]]
+* [[Romansch]]: [[cunigl]]
+* Russian: {{t+|ru|кролик|m|tr=królik}}, {{t+|ru|крольчиха|f|tr=krol’číxa}}
+* [[Sardinian]]: [[cunillu]], [[cacciappu]]
+* [[Scots]]: {{tø|sco|kinnen|xs=Scots}}
+* [[Scottish Gaelic]]: {{t-|gd|coineanach|m|xs=Scottish Gaelic}}, {{t-|gd|rabaid|m|xs=Scottish Gaelic}}
+* Serbo-Croatian:
+*: Cyrillic: {{t-|sh|зец|m|alt=зе̑ц|sc=Cyrl}}, {{t-|sh|кунић|m|alt=ку̀нӣћ|sc=Cyrl}}
+*: Roman: {{t-|sh|zec|m|alt=zȇc}}, {{t-|sh|kunić|m|alt=kùnīć}}
+* [[Sicilian]]: {{t+|scn|cunigghiu|m|xs=Sicilian}}
+* Slovak: [[králik]] {{m}}
+* Slovene: {{t+|sl|kunec|m}}
+* Somali: [[bakayle]]
+* [[South Slavey]]: {{tø|xsl|gah}}
+* Spanish: {{t+|es|conejo|m}}
+* Swahili: {{t+|sw|sungura|xs=Swahili}}
+* Swedish: {{t+|sv|kanin|c}}
+* [[Tagalog]]: [[kuneho]]
+* [[Tamil]]: {{t|ta|முயல்|sc=Thai}}
+* [[Taos]]: [[pȉwéna]]
+* [[Telugu]]: [[కుందేలు]] (kumdealu)
+* Thai: {{t+|th|กระต่าย|tr=kratàai}}
+* Tibetan: {{tø|bo|ཡོས|tr=yos|sc=Tibt|xs=Tibetan}}
+* Turkish: {{t+|tr|tavşan}}
+* [[Tz'utujil]]: [[umul]]
+* [[Tzotzil]]: [[t'ul]]
+* Ukrainian: {{t|uk|кріль|m|tr=kril’|xs=Ukrainian}}, {{t+|uk|кролик|m|tr=królyk|xs=Ukrainian}}
+* [[Upper Sorbian]]: [[nukl]]
+* Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|سسا|m|tr=susā|sc=ur-Arab}}
+* [[Volapük]]: {{qualifier|male or female}} {{t|vo|krolig}}, {{qualifier|male}} {{t|vo|hikrolig}}, {{qualifier|female}} {{t|vo|jikrolig}}, {{qualifier|male or female offspring}} {{t|vo|kroligül}}, {{qualifier|male offspring, young}} {{t|vo|hikroligül}}, {{qualifier|female offspring, young}} {{t|vo|jikroligül}}
+* Welsh: [[cwningen]]
+* [[West Frisian]]: [[knyn]]
+* [[Wolof]]: {{t|wo|njomboor|alt=njomboor ji}}
+{{trans-bottom}}
+
+{{trans-top|fur}}
+* Czech: {{t-|cs|králík|m}}
+* Finnish: {{t-|fi|kaniturkis}}, {{t+|fi|kani}}
+* Greek: {{t|el|κόνικλος|m|tr=kóniklos}}
+* Italian: {{t+|it|lapin|m}}
+* [[Scottish Gaelic]]: {{t-|gd|coineanach|m|xs=Scottish Gaelic}}, {{t-|gd|rabaid|m|xs=Scottish Gaelic}}
+{{trans-mid}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|зечевина|f|sc=Cyrl}}
+*: Roman: {{t|sh|zečevina|f}}
+* [[Volapük]]: {{t|vo|kroligapläd}}
+{{trans-bottom}}
+
+{{trans-top|pacesetter}}
+* Finnish: {{t+|fi|jänis}}
+{{trans-mid}}
+* Italian: {{t+|it|lepre|f}}
+{{trans-bottom}}
+
+{{trans-top|poor batsman}}
+{{trans-mid}}
+{{trans-bottom}}
+
+====Verb====
+{{en-verb|rabbits|'''[[rabbitting]]''' or '''[[rabbiting]]'''|'''[[rabbitted]]''' or '''[[rabbited]]'''}}
+
+# {{intransitive}} To [[hunt]] rabbits.
+# {{US|intransitive}} to [[flee]].
+#: ''The informant seemed skittish, as if he was about to '''rabbit'''.
+
+=====Synonyms=====
+* {{italbrac|to flee}}: [[run off]], [[scamper]], [[bolt]]
+
+=====Translations=====
+{{trans-top|to hunt rabbits}}
+* Finnish: [[olla]] [[kanijahti|kanijahdissa]]
+{{trans-mid}}
+{{trans-bottom}}
+
+====See also====
+{{top2}}
+* [[buck]]
+* [[cottontail]]
+* [[doe]]
+* [[hare]]
+{{mid2}}
+* [[kitten]]
+* [[warren]]
+* [[w:rabbit|Wikipedia article on the rabbit]]
+{{bottom}}
+
 ===Etymology 2===
 From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 
