--- a/en/p/palinspastic.776587.wikitext
+++ b/en/p/palinspastic.776587.wikitext
@@ -9,7 +9,5 @@ From {{etyl|grc}} {{term|sc=Grek|lang=el|πάλιν||again|tr=pálin}} + {{term|
 * {{IPA|pælɪnˈspæstɪk}}
 * {{rhymes|æstɪk}}
 
-===Adjective===
-{{en-adj|-}}
-
-# {{geology|of a map}} Showing the previous location of geological features, correcting for any intervening [[crustal]] movements.
+ <span #nmouseover="_tipon(this)" #nmouseout="_tipoff()"><span class="google-src-text" st#le="direction: ltr; text-align: left">===Adjective=== {{en-adj|-}} # {{geology|of a map}} Showing the previous lo#ation of geological features, correcting for any intervening ##crustal## movements#</span> Adjectif === === {{fr-adj | -}} # {{Géologie | d'une carte}} indiquant l'emplacement précédent de caractéristiques géologiques, la correction de toute intervention [[croûte]] mouvements.</span>
+[[File:Briançonnais modèles 7F.jpg|thumb|Modèles palinspastiques en forme de blocs diagrammes des Préalpes médianes #Briançonnais s.l.# au Jurassique moyen. ]]
