--- a/en/d/dodgem.855185.wikitext
+++ b/en/d/dodgem.855185.wikitext
@@ -11,5 +11,8 @@
 #*'''2007''', "Special Offer," ''North Devon Gazette'' (UK), 19 Dec.:
 #*:What better way to let off a little steam, than by zipping around on the '''dodgems''', or flying high on the Cosmic Typhoon roller coaster?
 
+====Translations====
+{{trans-see|bumper car}}
+
 [[fr:dodgem]]
 [[zh:dodgem]]
