--- a/en/m/moonlighter.720229.wikitext
+++ b/en/m/moonlighter.720229.wikitext
@@ -11,6 +11,7 @@
 * French: {{t|fr|travailleur au noir|m}}, {{t|fr|travailleuse au noir|f}}
 {{trans-mid}}
 * German: {{qualifier|colloquial}} {{t|de|Schwarzarbeiter|m}}, {{qualifier|colloquial}} {{t|de|Schwarzarbeiterin|f}}, {{t|de|Doppelverdiener|m}}, {{t|de|Doppelverdienerin|f}}, {{t|de|Person mit Nebentätigkeit|f}}, {{t|de|Mann mit Nebentätigkeit|m}}, {{t|de|Frau mit Nebentätigkeit|f}}
+* Swedish: {{t|sv|svartjobbare|n}}, {{t|sv|svartjobberska|f}}
 {{trans-bottom}}
 
 
