--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
-===Etymology===
+===~Etymology~===
 < {{etyl|enm}} {{term|simple|lang=enm}} < {{etyl|fro}} and {{etyl|fr}} {{term|simple|lang=fr}} < {{etyl|la}} {{term|simplex||simple, literally 'onefold', as opposed to duplex, twofold, double}} < {{term|sim-||the same}} + {{term|plicare||to fold}}: see [[same]] and [[fold]]. Compare [[single]], [[singular]], [[simultaneous]], etc.
 
 ===Pronunciation===
