--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -17,6 +17,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 
 =====Translations=====
 {{trans-top|Old World nocturnal mammal of the family Viverridae}}
+* Chinese: {{t|cmn|獛|tr=[[pú]]|sc=Hani}}
 {{trans-mid}}
 {{trans-bottom}}
 
