--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -191,7 +191,7 @@ From {{etyl|ang}} verb {{term|beodan|bēodan|offer, announce|lang=ang}}. Conflat
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
-[[Category:English verbs which are their own past participle]]
+[[Category:English verbs with base form identical to past participle]]
 
 ----
 
