--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -55,6 +55,8 @@
 
 # [[Panchen Lama]]
 
+[[Category:ca:Buddhism]]
+
 ----
 
 ==Danish==
@@ -64,14 +66,18 @@
 
 # [[Panchen Lama]]
 
+[[Category:da:Buddhism]]
+
 ----
 
 ==Indonesian==
 
 ===Noun===
-{{infl|id|noun}}
+{{id-noun}}
 
 # [[Panchen Lama]]
+
+[[Category:id:Buddhism]]
 
 ----
 
@@ -82,6 +88,8 @@
 
 # [[Panchen Lama]]
 
+[[Category:it:Buddhism]]
+
 ----
 
 ==Portuguese==
@@ -90,6 +98,8 @@
 {{pt-noun}}
 
 # [[Panchen Lama]]
+
+[[Category:pt:Buddhism]]
 
 ----
 
@@ -100,6 +110,8 @@
 
 # [[Panchen Lama]]
 
+[[Category:es:Buddhism]]
+
 ----
 
 ==Tagalog==
@@ -109,6 +121,8 @@
 
 # [[Panchen Lama]]
 
+[[Category:tl:Buddhism]]
+
 ----
 
 ==Upper Sorbian==
@@ -117,5 +131,7 @@
 {{infl|hsb|noun}}
 
 # [[Panchen Lama]]
+
+[[Category:hsb:Buddhism]]
 
 [[hu:Panchen Lama]]
