--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -1,4 +1,4 @@
-[[Image:Marbled polecat.jpg|thumb|right|A polecat (weasel-like animal).]]
+[[Image:Marbled polecat.jpg|thumb|right|A [[marbled polecat]] (weasel-like animal).]]
 ==English==
 
 ===Pronunciation===
