--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -51,7 +51,7 @@ See [[bind]]
 {{trans-bottom}}
 
 ===Etymology 2===
-< {{etyl|enm}} {{term|bounde}} < {{etyl|fro}} {{term|bunne}} < {{etyl|ML.}} {{term|bodina}}, earlier {{term|butina||a bound, limit}}
+From {{etyl|enm}} {{term|bounde}}, from {{etyl|fro}} {{term|bunne}}, from {{etyl|ML.}} {{term|bodina}}, earlier {{term|butina||a bound, limit}}
 
 ====Noun====
 {{en-noun}}
@@ -144,7 +144,7 @@ See [[bind]]
 {{trans-bottom}}
 
 ===Etymology 3===
-< {{etyl|fr}} {{term|bondir||to leap, bound, originally make a loud resounding noise|lang=fr}}; perhaps < {{etyl|LL.}} {{term|bombitare|bombitāre|lang=la}}, present active infinitive of {{term|bombito|bombitō|hum, buzz|lang=la}}, frequentive verb < {{etyl|la}} {{term|bombus||a humming or buzzing|lang=la}}.
+From {{etyl|fr}} {{term|bondir||to leap, bound, originally make a loud resounding noise|lang=fr}}; perhaps, from {{etyl|LL.}} {{term|bombitare|bombitāre|lang=la}}, present active infinitive of {{term|bombito|bombitō|hum, buzz|lang=la}}, frequentive verb, from {{etyl|la}} {{term|bombus||a humming or buzzing|lang=la}}.
 
 ====Noun====
 {{en-noun}}
