--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -43,6 +43,7 @@
 {{trans-mid}}
 * [[Ido]]: {{t+|io|florkaulo|xs=Ido}}
 * Indonesian: {{t-|id|blumkol|xs=Indonesian}}
+* Italian: {{t|it|cavolfiore|m}}
 * Japanese: {{t-|ja|カリフラワー|tr=karifurawā}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu|sc=Hang}}
 * [[Macedonian]]: {{t-|mk|карфиол|m|tr=karfiól}}
