--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -108,7 +108,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Ukrainian: {{t+|uk|борсук|m|tr=borsúk|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[šwinc]] {{m}}
 * [[Volapük]]: {{t+|vo|daf|xs=Volapük}}
-* Welsh: {{t+|cy|mochyn daear|m|xs=Welsh}}
+* Welsh: {{t+|cy|mochyn daear|m|xs=Welsh}}, {{t|cy|broch}}
 * [[West Frisian]]: [[das]] {{c}}
 {{trans-bottom}}
 
