--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -33,13 +33,14 @@
 * German: [[Mufflon]] {{m}}
 * Greek: {{t|el|μουφλόν|sc=Grek|tr=mouflón}}
 * Hungarian: {{t-|hu|muflon}}
+* Irish: {{t|ga|caora mouflon|f}}
 * Italian: {{t+|it|muflone|m}}
 * Japanese: {{t|ja|ムフロン|sc=Jpan|tr=mufuron}}
 * [[Ladin]]: [[muflon]]
 * Latvian: [[muflons]]
 * Lithuanian: {{t+|lt|muflonas|xs=Lithuanian}}
-* [[Lower Sorbian]]: [[muflon]]
 {{trans-mid}}
+* [[Lower Sorbian]]: [[muflon]]
 * [[Macedonian]]: {{t|mk|муфлон|sc=Cyrl}}
 * Maltese: [[muflun]]
 * Navajo: {{tø|nv|Tó wónaanídę́ę́ʼ dibé ałchiní}}
