--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -2,6 +2,7 @@
 
 ===Etymology===
 From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{term|simple|lang=fr}}, from {{etyl|la}} {{term|simplex||simple, literally 'onefold', as opposed to duplex, twofold, double}}, from {{term|sim-||the same}} + {{term|plicare||to fold}}: see [[same]] and [[fold]]. Compare [[single]], [[singular]], [[simultaneous]], etc.
+The latin root sim means one not the same
 
 ===Pronunciation===
 * {{IPA|/ˈsɪmpl/}}
