--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -69,6 +69,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * [[variety]]
 * [[binomial nomenclature]]
 {{bottom}}
+{{up downy}}
 
 ====Translations====
 {{trans-top|group of plants or animals having similar appearance}}
