--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -9,7 +9,11 @@
 
 # {{past of|bleed}}
 
-----
+===Noun===
+{{en-noun}}
+
+#{{UK|slang|[[MLE]]}} Alternate form of [[blud]].
+# :''Hey '''bled''', what's happenin'?''
 
 ==French==
 
