--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -12,7 +12,7 @@
 ===Noun===
 {{en-noun}}
 
-#{{UK|slang|[[MLE]]}} Alternate form of [[blud]].
+#{{rfv-sense}} {{UK|slang|[[MLE]]}} Alternate form of [[blud]].
 #:''Hey '''bled''', what's happenin'?''
 
 ==French==
