--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -9,6 +9,7 @@
 ====Translations====
 {{trans-top|language}}
 * Georgian: {{t|ka|ლაზური|tr=lazuri|sc=Geor}}
+* [[Laz]]: {{tø|lzz|ლაზური ნენა|tr=lazuri nena}}
 {{trans-mid}}
 * Russian: {{t|ru|лазский|m|tr=lázskij|sc=Cyrl}}
 {{trans-bottom}}
