--- a/en/b/bragging rights.856465.wikitext
+++ b/en/b/bragging rights.856465.wikitext
@@ -8,3 +8,4 @@
 #*:Worth as much as $900 million, he estimates, the author clearly thinks he has earned '''bragging rights''', and he intends to exercise them.
 
 [[ta:bragging rights]]
+A good reason to talk with pride about something you have done; source: [http://www.learnersdictionary.com/search/bragging%20rights Merriam-Webster's Learner's Dictionary]
