--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -20,11 +20,9 @@ From {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} 
 ''Note: Many languages have no equivalent of this word; in those cases, the translations given here are for'' '''yes'''.
 {{trans-top|yes}}
 * Arabic: {{t-|ar|أيوة|tr='áywa}} (''Eastern Arabic''), {{t|ar|إية|tr='íyya}} (''Western Arabic'')
-* Bosnian: {{t-|bs|ja}}
 * [[Catalan]]: {{t|ca|sí}}
 * Chinese:
 *: Mandarin: {{t|cmn|是啊|tr=shì a|sc=Hani}},  {{t|cmn|對啊|sc=Hani}},  {{t|cmn|对啊|tr=duì a|sc=Hani}}, {{t|zh|啊|tr=à|sc=Hani}}
-* Croatian: {{t+|hr|ja}}
 * Czech: {{t+|cs|jo}}
 * Dutch: {{t+|nl|ja}}, {{t+|nl|jawel}}
 * Finnish: {{t+|fi|joo}}, {{t-|fi|juu}}
@@ -36,17 +34,17 @@ From {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} 
 * [[Interlingua]]: [[si#Interlingua|si]]
 * Italian: {{t+|it|si}},  {{t+|it|già}}
 * Japanese: {{t-|ja|うん|tr=un}},  {{t+|ja|そう|tr=sō}},  {{t+|ja|ええ|tr=ē}},  {{t+|ja|ああ|tr=ā}}
+* Korean: {{t|ko|네|tr=ne|sc=Kore}}, {{t|ko|예|tr=ye|sc=Kore}}, {{t|ko|응|tr=eung|sc=Kore}}, {{t|ko|응|tr=eo|sc=Kore}}
 {{trans-mid}}
-* Korean: {{t|ko|네|sc=Kore}}, {{t|ko|예|sc=Kore}}, {{t|ko|응|sc=Kore}}
 * Navajo: {{tø|nv|wehee}}
 * Norwegian: {{t|no|ja}}
 * Persian: {{t+|fa|بله|tr=bale}}, {{t|fa|آره|tr=âre|sc=fa-Arab}}
 * Polish: {{t+|pl|tak}}
 * Portuguese: {{t+|pt|sim}}
 * Russian: {{t+|ru|ага|tr=agá, ahá}},  {{t+|ru|угу|tr=ugú, uhú}},  {{t+|ru|так|tr=tak}},  {{t|ru|ну|tr=nu}}
-* Serbian:
-*: Cyrillic: [[ја#Serbian|ја]]
-*: Roman: [[ja#Serbian|ja]]
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|ја}}
+*: Roman: {{t|sh|ja}}
 * Slovak: {{t|sk|no}} <!-- Yes, this is in the right place, no means yeah or yep in Slovak -->
 * Slovene: {{t|sl|ja}}
 * Spanish: {{t+|es|sí}}
