--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -4,7 +4,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{biblical}}  A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[2 Kings]].
+# {{biblical}}  The tenth book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[2 Kings]].
 
 ====Related terms====
 * [[Kgs]]
