--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -14,6 +14,8 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 # The sound made by a [[duck]].
 #: ''Did you hear that duck make a '''quack'''?''
 
+# {{colloquial}}, {{pejorative}}  A term for a [[doctor]], particularly an [[incompetent]] or [[irresponsible]] doctor
+
 =====Translations=====
 {{trans-top|sound made by a duck}}
 * Danish: {{t|da|rap|n}}
