--- a/en/n/nonary.802775.wikitext
+++ b/en/n/nonary.802775.wikitext
@@ -4,8 +4,18 @@
 {{en-adj|-}}
 
 # Of [[ninth]] [[rank]] or [[order]].
-#*'''1984''' Jan 9, L. J. Walpole, ''Fourth-Rank Tensors of the Thirty-Two Crystal Classes: Multiplication Tables'', in ''Proceedings of the Royal Society of London, Series A, Mathematical and Physical Sciences'' 391(1800), pages 149-179, [http://links.jstor.org/sici?sici=0080-4630%2819840109%29391%3A1800%3C149%3AFTOTTC%3E2.0.CO%3B2-Q]
-#*:[...] and the rhombic algebra is established as the direct sum of the '''nonary''' subalgebra of the ''U<sub>pq</sub>'' and of the three unary subalgebras generated individually by ''V'', ''W'' and ''X'', [...]
+#* {{quote-journal
+    | date = 1984-01-09
+    | first = L. J.
+    | last = Walpole
+    | title = Fourth-Rank Tensors of the Thirty-Two Crystal Classes: Multiplication Tables
+    | journal = Proceedings of the Royal Society of London, Series A, Mathematical and Physical Sciences
+    | volume = 391
+    | issue = 1800
+    | pages = 149-179
+    | jstor = 2397534
+    | passage = {{...}} and the rhombic algebra is established as the direct sum of the '''nonary''' subalgebra of the ''U<sub>pq</sub>'' and of the three unary subalgebras generated individually by ''V'', ''W'' and ''X'', {{...}}
+}}
 
 ====See also====
 * [[primary]] (1)
