--- a/en/m/microdot.720320.wikitext
+++ b/en/m/microdot.720320.wikitext
@@ -4,17 +4,17 @@
 ===Noun===
 {{en-noun}}
 
-# A [[photographic]] [[image]] that has been [[reduce]]d in size to that of a [[dot]] (typically around 1mm in size and circular) in order to escape detection. <ref name=microdots>[http://www.micro-dots.org/ DotGuard Microdots]</ref>.
+# A [[photographic]] [[image]] that has been [[reduce]]d in size to that of a [[dot]] (typically around 1mm in size and circular) in order to escape detection.
 
 ====Translations====
+{{trans-top|image that has been reduced in size to that of a dot}}
 * Dutch: {{t-|nl|microdot}}
-* French: [[micropoint]]
-* German: [[Mikropunkt]]
-* Polish: [[mikrokropka]]
-* Russian: [[микроточка]]
-
-===References===
-<references/>
+* French: {{t|fr|micropoint}}
+* German: {{t|de|Mikropunkt}}
+{{trans-mid}}
+* Polish: {{t|pl|mikrokropka}}
+* Russian: {{t|ru|микроточка}}
+{{trans-bottom}}
 
 [[vi:microdot]]
 [[zh:microdot]]
