--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -12,9 +12,11 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 
 # {{non-gloss definition|Denotes [[singular]] [[grammatical]] [[number]].}}
 # {{rfd-sense}} {{chemistry}} Forms the ends of the names of certain [[element]]s (such as [[molybdenum]] and [[platinum]]).
-# Denotes transitive verbs in the trade pidgins used between English-speakers and American Indians; used derogatorily by extension in English by addition to any verb, transitive or not.
+# Denotes transitive verbs in the trade pidgins used between English-speakers and indigenous populations; used derogatorily by extension in English by addition to any verb, transitive or not.
 #*'''1896''', F J Stimsom, ''King Noanett: A Story of Old Virginia and the Massachusetts Bay'', p. 254:
 #*:"Giv'''um''' dinner; smok'''um''' pipe," was all that we could get out of Quatchett.
+#*'''1871''' Mrs. Edward Millett, ''An Australian parsonage; or, The settler and the savage in Western Australia'', p. 129:
+#*: Having finished her return of deaths, she went on to say "Black fellow sick—white lady fowl send'''um'''—white lady kangaroo send'''um'''—master all self eat'''um'''—" but here she paused and made an exception in favour of the matron, expressed by the words " Missis not eat'''um'''—missis good fellow."
 
 ====Usage notes====
 * The vast majority of words which feature this suffix also have standard ''-ums'' plurals formed by suffixation with the {{term|-s|lang=en}} plural suffix. However, in such situations, the {{term||-s}} suffix morphologically is additional to and separate from the {{term||-um}} suffix.
