--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -202,7 +202,7 @@ From the noun ''mill''
 {{trans-top|grind or process using a mill or other machine}}
 * Catalan: {{t|ca|moldre}}
 * Dutch: {{t+|nl|malen}}
-* Finnish: {{t+|fi|jauhaa}}
+* Finnish: {{t+|fi|jauhaa}}, {{t|fi|jyrsiä}}
 * French: {{t+|fr|moudre}}
 * Latvian: {{t|lv|malt}}
 * Macedonian: {{t|mk|меле|tr=méle}}, {{t|mk|сомелува|tr=soméluva}}, {{t|mk|сомелува|tr=soméluva}}
@@ -219,6 +219,7 @@ From the noun ''mill''
 
 {{trans-top|shape, polish, etc, using a machine}}
 * Dutch: {{t+|nl|slijpen}}
+* Finnish: {{t|fi|työstää}}
 * Macedonian: {{t|mk|струга|tr=strúga}}, {{t|mk|струже|tr=strúže}}
 {{trans-mid}}
 * Spanish: {{t|es|pulir}}
@@ -227,9 +228,11 @@ From the noun ''mill''
 {{trans-top|engrave groove around the edge of}}
 * Dutch: {{t-|nl|graveren}}
 {{trans-mid}}
+* Finnish: {{t|fi|jyrsiä}}, {{t|fi|kaivertaa}}
 {{trans-bottom}}
 
 {{trans-top|move about in an aimless fashion}}
+* Finnish: {{t|fi|pyöriä}}
 {{trans-mid}}
 {{trans-bottom}}
 
