--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -53,6 +53,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * Bulgarian: {{t|bg|гега|f}}
 * Finnish: [[käyräsauva]]
 * French: {{t|fr|houlette|f}}
+* {{trreq|Georgian}}
 {{trans-mid}}
 * German: [[Hirtenstab]] {{m}}, [[Krummstab]] {{m}}
 * Greek: {{t|el|γκλίτσα|f|tr=gklítsa}}
