--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{suffix|antinomian|ism}}.
+From {{suffix|antinomian|ism}}, coined by {{w|Martin Luther}}, notably used in his ''Against the Antinomians'' (1539).
 
 ===Noun===
 {{en-noun|s|-}}
