--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/bIˈɡæn/}}, {{X-SAMPA|/bI"g{n/}}
+* {{IPA|/bɪˈɡæn/}}, {{X-SAMPA|/bI"g{n/}}
 * {{audio|en-us-began.ogg|Audio (US)}}
 * {{rhymes|æn}}
 * {{hyphenation|be|gan}}
