--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -1,5 +1,7 @@
 ==English==
 [[Image:Cocacola-5cents-1900 edit1.jpg|thumb|A [[Coca-Cola]] advertisement from the 1890s]]
+===Alternative forms===
+* {{l|en|advertizement}}
 
 ===Etymology===
 From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}}, compare French {{term|avertissement||warning|lang=fr}}. See [[advertise]].
