--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -9,6 +9,14 @@
 *: {{audio|en-us-blow.ogg|Audio (US)}}
 
 ===Etymology 1===
+From {{etyl|enm}} {{term|blo|lang=enm}}, {{term|bloo|lang=enm}}, from {{etyl|ang}} {{term|blaw|blāw|blue|lang=ang}}, from {{proto|Germanic|blēwaz|blue, dark blue, grey, black|lang=en}}, from {{proto|Indo-European|bʰlēw-|yellow, blond, grey|lang=en}}. Cognate with {{etyl|la|-}} {{term|flavus||yellow|lang=la}}. More at {{l|en|blue}}.
+
+====Adjective====
+{{en-adj|blow|er|more}}
+
+# {{context|now|_|chiefly|_|dialectal|Northern England}} [[blue|Blue]].
+
+===Etymology 2===
 From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blāwan|to blow, breathe, inflate, sound|lang=ang}}, from {{proto|Germanic|blēanan|to blow|lang=en}} (compare German {{term|blähen|lang=de}}), from {{proto|Indo-European|bhle-}} 'to swell, blow up' (compare Latin {{term|flare|lang=la}} 'to blow', Armenian {{term|bełun}} 'fertile').
 
 ====Verb====
@@ -336,7 +344,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 
 {{trans-see|cocaine}}
 
-===Etymology 2===
+===Etymology 3===
 {{etyl|enm|en}} {{term|blowe|lang=enm}}, {{term|blaw|lang=enm}}, northern variant of {{term|blewe|blēwe|lang=enm}}, from {{proto|Germanic|blewwanan}} 'to beat' (compare Old Norse {{term|blegði|lang=non}} 'wedge', German {{term|bläuen|lang=de}}, Middle Dutch {{term|blouwen|lang=nl}}). Related to [[block]].
 
 ====Noun====
@@ -403,7 +411,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Telugu: [[దెబ్బ]] (2)
 {{trans-bottom}}
 
-===Etymology 3===
+===Etymology 4===
 {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term|blowan|blōwan|lang=ang}}, from {{proto|Germanic|blōanan}} (compare Dutch {{term|bloeien|lang=nl}}, German {{term|blühen|lang=de}}), from {{proto|Indo-European|bhel-}} 'to thrive, bloom' (compare Latin {{term|florere|florēre|lang=la}} 'to bloom').
 
 ====Verb====
