--- a/en/p/POW.4325.wikitext
+++ b/en/p/POW.4325.wikitext
@@ -1,32 +1,19 @@
 {{also|pow}}
 ==English==
 
-==={{abbreviation}}===
-'''POW''' (''plural'' '''[[POWs]]''')
+===Noun===
+{{en-noun}}
 
-# [[prisoner of war]]
+# [[prisoner of war#English|Prisoner of war]].
 #: ''After his capture he was taken to a camp for POWs.''
 
 ====Synonyms====
 * [[PW]] {{qualifier|Canada|military}}
 
 ====Translations====
-''Translations of the abbreviation appear below.  For translations of the full phrase, see [[prisoner of war]].''
-<!--Translate only the abbreviation here-->
-<!--
-* Chinese: [[战俘]]
-* Dutch: [[krijgsgevangene]]
-* German: {{t-|de|Kriegsgefangener|m}}
-* [[Interlingua]]: [[prisionere de guerra]]
-* Italian: [[prigioniero di guerra]] {{m}}
-* Norwegian: {{t|no|fange av krig}}
-* Polish: [[jeniec wojenny]] {{m}}
-* Portuguese: [[prisioneiro de guerra]]
-* Slovak: [[zajatec]] {{m}} (zajatci {{p}})
-* Spanish: [[prisionero de guerra]]
-* Swedish: {{t|sv|krigsfånge}}
-* [[Volapük]]: [[kligafanäböpäb]]
--->
+{{trans-top|initialism of prisoner of war}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Anagrams===
 * [[wop#English|wop]]
