--- a/en/g/greys.741395.wikitext
+++ b/en/g/greys.741395.wikitext
@@ -8,6 +8,13 @@
 ===Anagrams===
 * [[gyres#English|gyres]]
 
+----
+
+===Icelandic===
+{{is-noun form}} {{n}}
+
+# {{is-inflection of|grey|indef|gen|s}}
+
 [[ar:greys]]
 [[fr:greys]]
 [[my:greys]]
