--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -35,6 +35,7 @@ From {{etyl|enm}} {{term|rotten|lang=enm}}, {{term|roten|lang=enm}}, from {{etyl
 * German: {{t|de|verrotten}}, {{t+|de|verderben}}
 {{trans-mid}}
 * Greek: {{t|el|σαπίζω|tr=sapízo}}
+* Hungarian: {{t|hu|rohad}}, {{t|hu|rothad}}
 * Italian: {{t+|it|marcire}}
 * Japanese: {{t|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
 * Korean: {{t|ko|썩다|tr=sseokda|sc=Kore}}, {{t|ko|부패하아|tr=bupae-hada|sc=Kore}}
