--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -16,7 +16,7 @@
 ==Spanish==
 
 ===Etymology===
-From a {{etyl|VL.|es}} root *''domnicella'' < {{etyl|la|es}} {{term|domina|lang=la}}. Compare French {{term|damoiselle|lang=fr}}.
+From a {{etyl|VL.|es}} root *''domnicella'' < {{etyl|la|es}} {{term|domina|lang=la}}. Compare French {{term|demoiselle|lang=fr}}.
 
 ===Noun===
 {{es-noun|f}}
