--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -43,7 +43,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 * Hungarian: {{t|hu|összeköt}}
 * Ido: [[bindar]]
 * Indonesian: [[ikat]], [[sambung]], [[hubung]]
-* Italian: to connect: [[legare]], to couple: [[connettere]], to produce a book: [[rilegare]]
+* Italian: [[legare]]
 {{trans-mid}}
 * Japanese: [[繋ぐ]] ([[つなぐ]], tsunagu), [[繋げる]] ([[つなげる]], tsunageru),  {{t|ja|縛る|tr=shibaru}},  {{t|ja|結ぶ|tr=musubu}}
 * Latin: {{t-|la|conecto|alt=cōnectō}},  {{t+|la|iungo|alt=iungō}},  {{t-|la|necto|alt=nectō}}, {{t|la|teneo}}
@@ -62,6 +62,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 * Bulgarian: {{t|bg|връзвам}},  {{t|bg|приързвам}}
 * Czech: {{t-|cs|spojit}}
 * German: {{t+|de|verbinden}}
+* Italian: [[connettere]]
 {{trans-mid}}
 * Turkish: {{t|tr|birleştirmek}}
 * Vietnamese: {{t|vi|ghép cặp|xs=Vietnamese}},  {{t|vi|ghép đôi|xs=Vietnamese}}
@@ -73,6 +74,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 * Esperanto: {{t-|eo|bindi|xs=Esperanto}}
 * German: {{qualifier|z.B. ein Buch}} {{t|de|binden}}
 * Greek: {{t|el|βιβλιοδετώ|tr=vivliodetó|sc=Grek}}
+* Italian: [[rilegare]]
 {{trans-mid}}
 * Portuguese: {{t|pt|encapar}}, {{t|pt|encadernar}}
 * Russian: {{t|ru|переплетать|tr=perepletát'|alt=переплета́ть}}, {{t|ru|переплести|tr=pereplestí|alt=переплести́}}
