--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -102,7 +102,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{p
 * Dalmatian: {{tø|dlm|causa|f}}
 * Danish: {{t+|da|ting|c}}
 * Dutch: {{t+|nl|ding|n}}
-* Esperanto: {{t-|eo|aĵo|xs=Esperanto}}
+* Esperanto: {{t-|eo|aĵo|xs=Esperanto}}, {{t|eo|afero}}
 * Estonian: {{t-|et|asi}}, {{t-|et|ese}}
 * Finnish: {{t+|fi|asia}}
 * French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{qualifier|informal}}
@@ -183,6 +183,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{p
 * Czech: {{t|cs|věc}}, {{t|cs|předmět}}
 * Danish: {{t+|da|ting|c}}
 * Dutch: {{t+|nl|ding|n}}
+* Esperanto: {{t|eo|aĵo}}
 * Estonian: {{t-|et|asi}}, {{t-|et|ese}}
 * Finnish: {{t+|fi|asia}}
 * French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{qualifier|informal}}
