--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -68,8 +68,8 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
 * Amharic: {{t|am|ደሴት|f|tr=däset|sc=Ethi}}
 * Anglo-Norman: {{tø|xno|isle|f}}
-* Arabic: {{t|ar|جزيرة|f|tr=jaziira|alt=جَزِيرَة|sc=Arab}}
-*: [[Egyptian Arabic]]: {{tø|arz| جزيرة|f|tr=gezira|sc=Arab}}
+* Arabic: {{t|ar|جزيرة|f|tr=jazīra|alt=جَزِيرَة|sc=Arab}}
+*: [[Egyptian Arabic]]: {{tø|arz| جزيرة|f|tr=gezīra|sc=Arab}}
 * Aragonese: {{t|an|isla|f}}
 * Aramaic:
 *: Syriac: [[ܓܙܪܬܐ]] (gāzartā’) {{f}}
