--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -145,7 +145,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 ==Wolof==
 
 ===Verb===
-'''bind'''
+{{head|wo|verb}}
 
 # to write
 #: Jàngalekat jaa ngiy bind.
